<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationAuthorizedActivity"
    android:tag="content">
    
    <ImageView
        android:id="@+id/bannerImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/otherscreensbackground" />
        
    <TextView
        android:id="@+id/thankYouMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/thank_you"
        android:textColor="@android:color/black"
        style="@style/AppTextXXLarge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="72dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />
        
    <TextView
        android:id="@+id/nameValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        style="@style/AppTextXXLarge"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/thankYouMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />
        
    <TextView
        android:id="@+id/registeredMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registration_received_message"
        android:textColor="@android:color/black"
        style="@style/AppTextLarge"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toBottomOf="@id/nameValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <TextView
        android:id="@+id/registrationCodeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registration_code_label"
        android:textColor="@android:color/black"
        style="@style/AppTextLarge"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toBottomOf="@id/registeredMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <TextView
        android:id="@+id/registrationCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorSecondary"
        style="@style/AppTextXLarge"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toBottomOf="@id/registrationCodeLabel"
        app:layout_constraintStart_toStartOf="@id/registrationCodeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="14dp" />        

    <ImageView
        android:id="@+id/qrCodeImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@id/registrationCode"
        app:layout_constraintStart_toStartOf="@id/registrationCode"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/qr_code_content_description" />

    <Button
        android:id="@+id/doneBtn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/done"
        style="@style/AppTextMedium"
        android:backgroundTint="?attr/colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="7dp"
        android:layout_marginBottom="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
