<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationDataActivity"
    android:tag="content">
    
    <ImageView
        android:id="@+id/bannerImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/otherscreensbackground" />

    <ImageView
        android:id="@+id/resolvedIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/resolvedicon"
        android:layout_marginTop="72dp" 
        android:layout_marginStart="24dp" />

    <TextView
        android:id="@+id/verified"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/verified"
        android:textColor="@color/green"
        style="@style/AppTextLarge"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/resolvedIcon"
        app:layout_constraintStart_toStartOf="@id/resolvedIcon"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"  />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name_label_colon"
        android:textColor="@android:color/black"
        style="@style/AppTextLarge"
        app:layout_constraintTop_toBottomOf="@id/verified"
        app:layout_constraintStart_toStartOf="@id/verified"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"  />

    <TextView
        android:id="@+id/nameValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        style="@style/AppTextLarge"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/nameLabel"
        app:layout_constraintStart_toStartOf="@id/nameLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/dobLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dob_label_colon"
        android:textColor="@android:color/black"
        style="@style/AppTextLarge"
        app:layout_constraintTop_toBottomOf="@id/nameValue"
        app:layout_constraintStart_toStartOf="@id/nameValue"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/dobValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        style="@style/AppTextLarge"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/dobLabel"
        app:layout_constraintStart_toStartOf="@id/dobLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/address_label_colon"
        android:textColor="@android:color/black"
        style="@style/AppTextLarge"
        app:layout_constraintTop_toBottomOf="@id/dobValue"
        app:layout_constraintStart_toStartOf="@id/dobValue"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/addressValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        style="@style/AppTextLarge"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/addressLabel"
        app:layout_constraintStart_toStartOf="@id/addressLabel"
        app:layout_constraintEnd_toEndOf="parent" />
        

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">
        <Button
            android:id="@+id/rescanBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/rescan"
            android:textColor="@color/philippines_blue"
            android:enabled="true"
            style="@style/AppTextMedium"
            android:backgroundTint="@color/white"
            android:paddingTop="7dp"
            app:strokeColor="@color/philippines_blue"
            app:strokeWidth="2dp" />
        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/confirmBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/confirm"
            style="@style/AppTextMedium"
            android:backgroundTint="?attr/colorSecondary"
            android:paddingTop="7dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
