<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationScanSupportDocActivity"
    android:tag="content">

    <ImageView
        android:id="@+id/bannerImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/otherscreensbackground" />
        
    <ImageView
        android:id="@+id/idUploadIcon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/iduploadicon"
        android:layout_marginTop="42dp" 
        android:layout_marginStart="24dp" />

    <TextView
        android:id="@+id/uploadingMsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/uploading_document_msg"
        android:textColor="@android:color/black"
        style="@style/AppTextLarge"
        android:fontFamily="@font/poppins_semibold"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/idUploadIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/document_scanning_failed_msg"
        android:textColor="@android:color/holo_red_dark"
        style="@style/AppTextLarge"
        android:fontFamily="@font/poppins_semibold"
        android:visibility="gone"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/idUploadIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <FrameLayout
        android:id="@+id/documentViewFrame"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/idUploadIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="110dp" 
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <ImageView
            android:id="@+id/fullDocumentImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:visibility="gone"
            android:padding="12dp" />

        <!-- Corner border overlay -->
        <View
            android:id="@+id/fullDocumentBorderView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/corner_frame_rounded"
            android:visibility="gone"
            android:clickable="false"
            android:focusable="false" />
    </FrameLayout>

    <TextView
        android:id="@+id/instructionMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/document_scan_instruction"
        android:textColor="@android:color/black"
        style="@style/AppTextMedium"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/bottomButtonGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />
        
    <LinearLayout
        android:id="@+id/bottomButtonGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">
        <Button
            android:id="@+id/retakeBtn"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:text="@string/retake_scan"
            android:textColor="@color/philippines_blue"
            android:enabled="false"
            style="@style/AppTextMedium"
            android:backgroundTint="@color/white"
            android:layout_marginEnd="6dp"
            android:paddingTop="7dp"
            app:strokeColor="@color/philippines_blue"
            app:strokeWidth="2dp" />
        <Button
            android:id="@+id/continueBtn"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:text="@string/continueString"
            android:enabled="false"
            style="@style/AppTextMedium"
            android:backgroundTint="?attr/colorSecondary"
            android:layout_marginStart="6dp"
            android:paddingTop="7dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
