<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationScanDocActivity"
    android:tag="content">

    <ImageView
        android:id="@+id/bannerImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/otherscreensbackground" />
        
    <ImageView
        android:id="@+id/idUploadIcon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/iduploadicon"
        android:visibility="gone"
        android:layout_marginTop="72dp" 
        android:layout_marginStart="24dp" />

    <TextView
        android:id="@+id/uploadingMsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/uploading_document_msg"
        android:textColor="@android:color/black"
        style="@style/AppTextXLarge"
        android:fontFamily="@font/poppins_semibold"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/idUploadIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/document_scanning_failed_msg"
        android:textColor="@android:color/holo_red_dark"
        style="@style/AppTextLarge"
        android:fontFamily="@font/poppins_semibold"
        android:visibility="gone"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/uploadingMsg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="72dp" 
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />
        
    <Button
        android:id="@+id/continueBtn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/continueString"
        android:enabled="false"
        style="@style/AppTextMedium"
        android:backgroundTint="?attr/colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="7dp"
        android:layout_marginBottom="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
